# ontoit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: extraction.py  main.py  sample_w2.py  session.py
app/agent/: budget.py  graph.py  llm.py  state.py
app/observability/: events.py
app/pdf/: __init__.py  field_map.py  filler.py
app/static/: index.html
app/tax/: engine.py  params_2025.py  types.py
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  STATUS.md
docs/adrs/: ADR-001-langgraph-agent-harness.md  ADR-002-enforcement-in-graph-not-prompt.md  ADR-003-anthropic-claude-agent-and-vision.md  ADR-004-observation-event-contract.md  ADR-005-pdf-filling-pymupdf-bake.md  ADR-006-deterministic-tax-engine.md  ADR-007-tax-parameters-2025.md  ADR-008-w2-extraction-two-step.md  ADR-009-web-transport-sse-cookie-state.md  ADR-010-security-trust-boundaries.md  ADR-011-operability-hosting-render.md  ADR-012-stretch-mid-conversation-correction.md  ADR-013-stretch-tax-trace-panel.md
docs/architecture-diagrams/: index.html
docs/architecture-diagrams/variant-a/: agent-graph.html  data-flows.html  modules.html
docs/architecture-diagrams/variant-b/: agent-graph.html  data-flows.html  modules.html
docs/architecture-diagrams/variant-c/: agent-graph.html  data-flows.html  modules.html
docs/iterations/02-core-filing/: 02-tax-engine.md  (+3 more)
docs/research/: DOMAIN.md  MARKET.md  README.md  TECHNOLOGY.md
scripts/: smoke_test.sh
tests/: test_conversation.py  test_extraction.py  test_pdf.py  test_skeleton.py  test_tax_engine.py
(+10 files in other folders)
